--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-    color:blue;
+    color:rgb(85, 85, 205);
     font: 20px bolder;
     border: 2px solid rgb(85, 85, 205);
     padding: 10px;
