--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 body {
     background-color: rgba(150, 150, 240, 0.735);
 }
