--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 h1 {
+    text-align: center;
     color: blueviolet;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -6,8 +7,9 @@ body {
     background-color: rgba(150, 150, 240, 0.735);
 }
 p {
+    text-align: center;
+    font-family: Helvetica, serif;
     color:rgb(85, 85, 205);
-    font: 20px bolder;
     border: 2px solid rgb(85, 85, 205);
     padding: 10px;
     background-color: lightblue;
