--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ h1 {
 }
 body {
     background-color: rgba(150, 150, 240, 0.735);
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
 }
 #para1 {
     text-align: center;
