--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     background-color:rgba(174, 126, 218, 0.692) ;
 }
 
-#paratítulos {
+#paratitulos {
     color: blueviolet;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
