--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 h1 {
     text-align: center;
     color: blueviolet;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 60px;
 }
 body {
     background-color: rgba(150, 150, 240, 0.735);
@@ -11,10 +12,9 @@ body {
 }
 #para1 {
     text-align: center;
-    font-family: Helvetica, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:rgb(85, 85, 205);
-    border: 2px solid rgb(85, 85, 205);
-    padding: 10px;
+    padding: 20px;
     background-color: lightblue;
 }
 .lugares {
