--- a/style.css
+++ b/style.css
@@ -19,24 +19,27 @@ body {
 }
 .lugares {
     padding: 100px 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
     text-align: center;
+    color: rgb(85, 85, 205);
 }
 
 #para2 {
-    background-color:rgba(255, 166, 0, 0.562);
+    background-color:rgba(174, 126, 218, 0.692);
 }
 
 #para3 {
-    background-color: rgba(133, 234, 234, 0.728);
+    background-color:rgba(174, 126, 218, 0.692);
 }
 
 #para4 {
-    background-color:rgba(174, 126, 218, 0.692) ;
+    background-color:rgba(174, 126, 218, 0.692);
 }
 
 #paratitulos {
-    color: blueviolet;
-    font-family:'Space Grotesk', sans-serif;
+    color: rgb(85, 85, 205);
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 30px;
     margin-left: 15px;
 }
