--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 h1 {
     text-align: center;
-    color: blueviolet;
+    color: white;
     font-family: 'Space Grotesk', sans-serif;
     font-size: 60px;
 }
 body {
-    background-color: rgba(150, 150, 240, 0.735);
+    background-color: #0d1216;
     border: 0px;
     padding: 0px;
     margin: 0px;
@@ -13,9 +13,9 @@ body {
 #para1 {
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:rgb(85, 85, 205);
+    color:whitesmoke;
     padding: 20px;
-    background-color: lightblue;
+    background-color: #0d1216;
 }
 .lugares {
     padding: 100px 50px;
