--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-h1 {
-    text-align: center;
-    color: white;
-    font-family: 'Space Grotesk', sans-serif;
-    font-size: 60px;
-}
 body {
     background-color: #0d1216;
     border: 0px;
     padding: 0px;
-    margin: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+}
+#paraTitulo {
+    text-align: center;
+    color: white;
+    font-family: 'Climate Crisis', cursive;
+    font-size: 60px;
+    margin-left: 50px;
+    margin-right: 200px;
 }
 #para1 {
     text-align: center;
@@ -16,30 +20,26 @@ body {
     color:whitesmoke;
     padding: 20px;
     background-color: #0d1216;
+    margin-right: 50px;
+    margin-left: 200px;
 }
-.lugares {
-    padding: 100px 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    text-align: center;
-    color: rgb(85, 85, 205);
+#paraMenuSup {
+    background-color:#FFFFFF;
+    height: 40px;
+    position: sticky;
+    top: 0;
+    margin-bottom: 70px;
 }
-
-#para2 {
-    background-color:rgba(174, 126, 218, 0.692);
+#MargsTitulo {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-
-#para3 {
-    background-color:rgba(174, 126, 218, 0.692);
+hr {
+    margin-left: 20px;
+    margin-right: 20px;
 }
-
-#para4 {
-    background-color:rgba(174, 126, 218, 0.692);
-}
-
-#paratitulos {
-    color: rgb(85, 85, 205);
-    font-family: 'Space Grotesk', sans-serif;
-    font-size: 30px;
-    margin-left: 15px;
+#paraMenu{
+    color: #0d1216;
+    font-family: 'Inter Tight', sans-serif;
+    margin: 188px;
 }
