--- a/style.css
+++ b/style.css
@@ -7,39 +7,119 @@ body {
     margin-top: 0px;
 }
 #paraTitulo {
-    text-align: center;
     color: white;
     font-family: 'Climate Crisis', cursive;
-    font-size: 60px;
-    margin-left: 50px;
-    margin-right: 200px;
+    font-size: 50px;
+    width: 50vw;
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    margin-left: 150px;
 }
 #para1 {
-    text-align: center;
+    text-align: right;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:whitesmoke;
     padding: 20px;
     background-color: #0d1216;
     margin-right: 50px;
     margin-left: 200px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 #paraMenuSup {
     background-color:#FFFFFF;
     height: 40px;
     position: sticky;
     top: 0;
-    margin-bottom: 70px;
-}
-#MargsTitulo {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 hr {
     margin-left: 20px;
     margin-right: 20px;
 }
-#paraMenu{
+#paraMenu1{
     color: #0d1216;
     font-family: 'Inter Tight', sans-serif;
-    margin: 188px;
+    width: 25vw;
+    float: left;
+    text-align: left;
+    margin-top: 8.5px;
+    margin-left: 5px;
+}
+#paraMenu2{
+    color: #0d1216;
+    font-family: 'Inter Tight', sans-serif;
+    width: 25vw;
+    float: left;
+    text-align: right;
+    margin-top: 8.5px;
+}
+#paraMenu3{
+    color: #0d1216;
+    font-family: 'Inter Tight', sans-serif;
+    width: 47.2vw;
+    float: right;
+    text-align: left;
+    margin-top: 8.5px;
+}
+.margenes {
+    color: white;
+    font-family: 'Climate Crisis', cursive;
+    font-size: 50px;
+    width: 50%;
+    float: left;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 280px;
+}
+table{
+    margin-top: 30px;
+    margin-left: 115px;
+}
+td{
+    width: 350px;
+    height: 400px;
+    position: relative;
+}
+.imgTabla {
+    width: 90%;
+    height: 90%;
+}
+.textoFoto1{
+    position: absolute;
+    top: 42%;
+    bottom: 40%;
+    left: 21%;
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #FFFFFF;
+    padding: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #6D3826;
+}
+.textoFoto2{
+    position: absolute;
+    top: 42%;
+    bottom: 40%;
+    left: 21%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #FFFFFF;
+    padding: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #788143;
+}
+.textoFoto3{
+    position: absolute;
+    top: 42%;
+    bottom: 40%;
+    left: 14%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #FFFFFF;
+    padding: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #B89663;
 }
