--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+body{
     background-color: #0d1216;
     border: 0px;
     padding: 0px;
@@ -6,17 +6,18 @@ body {
     margin-right: 0px;
     margin-top: 0px;
 }
-#paraTitulo {
+#paraTitulo{
     color: white;
     font-family: 'Climate Crisis', cursive;
     font-size: 50px;
-    width: 50vw;
+    width: 35vw;
     float: left;
     margin-top: 5px;
     margin-bottom: 0px;
     margin-left: 150px;
+    margin-right: 0px;
 }
-#para1 {
+#para1{
     text-align: right;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:whitesmoke;
@@ -24,17 +25,17 @@ body {
     background-color: #0d1216;
     margin-right: 50px;
     margin-left: 200px;
-    margin-top: 40px;
+    margin-top: 0px;
     margin-bottom: 40px;
 }
-#paraMenuSup {
+#paraMenuSup{
     background-color:#FFFFFF;
     height: 40px;
     position: sticky;
     top: 0;
     margin-bottom: 30px;
 }
-hr {
+hr{
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -63,7 +64,7 @@ hr {
     text-align: left;
     margin-top: 8.5px;
 }
-.margenes {
+.margenes{
     color: white;
     font-family: 'Climate Crisis', cursive;
     font-size: 50px;
@@ -72,6 +73,7 @@ hr {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 280px;
+    margin-right: 0px;
 }
 table{
     margin-top: 30px;
@@ -82,7 +84,7 @@ td{
     height: 400px;
     position: relative;
 }
-.imgTabla {
+.imgTabla{
     width: 90%;
     height: 90%;
 }
@@ -122,4 +124,11 @@ td{
     padding-left: 5%;
     padding-right: 5%;
     background-color: #B89663;
+}
+.flecha1{
+    margin-right: 5px;
+}
+.flecha2{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
