--- a/style.css
+++ b/style.css
@@ -6,27 +6,22 @@ body{
     margin-right: 0px;
     margin-top: 0px;
 }
+
 #paraTitulo{
-    color: white;
+    display: flexbox;
+    justify-content: left;
+    flex-wrap: wrap;
+    color: whitesmoke;
     font-family: 'Climate Crisis', cursive;
     font-size: 50px;
-    width: 50vw;
-    float: left;
-    margin-top: 5px;
-    margin-bottom: 0px;
-    margin-left: 150px;
-    margin-right: 0px;
 }
 #para1{
-    text-align: right;
+    display: flexbox;
+    justify-content: right;
+    flex-wrap: wrap;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
     color:whitesmoke;
-    padding: 20px;
-    background-color: #0d1216;
-    margin-right: 50px;
-    margin-left: 200px;
-    margin-top: 0px;
-    margin-bottom: 70px;
 }
 #paraMenuSup{
     background-color:#FFFFFF;
@@ -36,8 +31,7 @@ body{
     margin-bottom: 30px;
 }
 hr{
-    margin-left: 20px;
-    margin-right: 20px;
+    display: flex;
 }
 #paraMenu1{
     color: #0d1216;
@@ -109,7 +103,7 @@ td{
     margin-bottom: 20px;
 }
 .fotos{
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 .foto{
