--- a/style.css
+++ b/style.css
@@ -6,32 +6,35 @@ body{
     margin-right: 0px;
     margin-top: 0px;
 }
-
+.container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
 #paraTitulo{
-    display: flexbox;
-    justify-content: left;
-    flex-wrap: wrap;
     color: whitesmoke;
     font-family: 'Climate Crisis', cursive;
     font-size: 50px;
+    margin-left: 20px;
+    align-self: center;
 }
 #para1{
-    display: flexbox;
-    justify-content: right;
-    flex-wrap: wrap;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     color:whitesmoke;
+    align-self: center;
+    margin-right: 20px;
+    margin-bottom: 0px;
 }
+
 #paraMenuSup{
     background-color:#FFFFFF;
     height: 40px;
     position: sticky;
     top: 0;
-    margin-bottom: 30px;
-}
-hr{
-    display: flex;
+    margin-bottom: 20px;
 }
 #paraMenu1{
     color: #0d1216;
@@ -58,35 +61,16 @@ hr{
     text-align: left;
     margin-top: 8.5px;
 }
-.margenes{
-    color: white;
-    font-family: 'Climate Crisis', cursive;
-    font-size: 50px;
-    width: 50%;
-    float: left;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 280px;
-    margin-right: 0px;
-}
-table{
-    margin-top: 30px;
-    margin-left: 115px;
-}
-td{
-    width: 350px;
-    height: 400px;
-    position: relative;
-}
+
 .imgTabla{
     width: 100%;
     height: 100%;
 }
 .textoFoto{
     position: absolute;
-    top: 35%;
-    left: 25%;
-    right: 25%;
+    top: 43%;
+    left: 15%;
+    right: 15%;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #FFFFFF;
@@ -105,6 +89,7 @@ td{
 .fotos{
     display: flex;
     justify-content: center;
+    margin-top: 15px;
 }
 .foto{
     width: 350px;
