--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -1,3 +1,25 @@
 body{
     background-color: #0d1216;
 }
+.menu{
+    display: flex;
+    position: sticky;
+    height: 40px;
+    top: 0;
+    margin-bottom: 20px;
+    background-color:#FFFFFF;
+    font-family: 'Inter Tight', sans-serif;
+    color: #0d1216;
+    align-items: center;
+    justify-content: space-between;
+}
+.volver{
+    margin-left: 5px;
+    margin-right: 15px;
+}
+.inicio{
+    margin-right: 15px;
+}
+.espacio{
+    margin-right: 15px;
+}
