--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -1,5 +1,10 @@
 body{
     background-color: #0d1216;
+    border: 0px;
+    padding: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
 }
 .menu{
     display: flex;
