--- a/style.css
+++ b/style.css
@@ -10,24 +10,29 @@ body{
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-content: center;
     align-items: center;
-    flex-wrap: wrap;
 }
-#paraTitulo{
+.container > #paraTitulo{
     color: whitesmoke;
     font-family: 'Climate Crisis', cursive;
-    font-size: 50px;
-    margin-left: 20px;
-    align-self: center;
+    font-size: 60px;
+    margin-right: 50px;
+    margin-left: 40px;
+    text-align: center;
 }
-#para1{
+.container > #para1{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     color:whitesmoke;
-    align-self: center;
-    margin-right: 20px;
+    text-align: right;
+    margin-right: 40px;
+    margin-left: 40px;
     margin-bottom: 0px;
+}
+.container > .flecha2{
+    margin: 0px;
 }
 .menu{
     display: flex;
@@ -47,6 +52,12 @@ body{
 }
 .inicio{
     margin-right: 15px;
+}
+#link:first-child{
+    color:#0d1216;
+}
+.subrayado {
+    text-decoration: none;
 }
 .espacio{
     margin-right: 15px;
@@ -75,7 +86,6 @@ body{
     margin-left: 5px;
     margin-right: 0px;
 }
-
 .fotos{
     display: flex;
     justify-content: center;
