--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -49,35 +49,42 @@ body{
     margin-top: 30px;
     margin-bottom: 10px;
 }
-.fotos{
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    padding: 30px;
+.container {
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 25px;
+}
+
+.foto1{
+    background-image:url(/Barrio/imagenes/Palermo.jpg);
+    background-size: cover;
+}
+.foto2{
+    background-image:url(/Barrio/imagenes/Colegiales.jpg);
+    background-size: cover;
+}
+.foto3{
+    background-image:url(/Barrio/imagenes/San\Telmo.jpg);
+    background-size: cover;
+}
+.foto4{
+    background-image:url(/Barrio/imagenes/Cañitas.jpg);
+    background-size: cover;
+}
+.foto5{
+    background-image:url(/Barrio/imagenes/Nuñez-Belgrano.jpg);
+    background-size: cover;
 }
 .tamaño{
     width: 220px;
     height: 300px;
 }
-.foto{
-    width: 350px;
-    height: 400px;
-    position: relative;
-    margin: 5px;
-}
 .texto-fotos{
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    padding: 30px;
     position: absolute;
-    top: 30%;
-    left: 15%;
-    right: 15%;
-    text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #FFFFFF;
-    padding: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
+    background-color: #788143;
+    text-align: center;
+    margin: 50px;
+    padding: 10px;
 }
