--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -49,42 +49,54 @@ body{
     margin-top: 30px;
     margin-bottom: 10px;
 }
-.container {
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 25px;
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    align-content: center;
 }
-
-.foto1{
-    background-image:url(/Barrio/imagenes/Palermo.jpg);
+.foto{
+    background-image:url(./imagenes/Palermo.jpg);
     background-size: cover;
+    width: 200px;
+    height: 300px;
+}
+.foto1{
+    background-image:url(./imagenes/Colegiales.jpg);
+    background-size: cover;
+    width: 200px;
+    height: 300px;
 }
 .foto2{
-    background-image:url(/Barrio/imagenes/Colegiales.jpg);
+    background-image:url(./imagenes/San\ Telmo.jpg);
     background-size: cover;
+    width: 200px;
+    height: 300px;
 }
 .foto3{
-    background-image:url(/Barrio/imagenes/San\Telmo.jpg);
+    background-image:url(./imagenes/Cañitas.jpg);
     background-size: cover;
+    width: 200px;
+    height: 300px;
 }
 .foto4{
-    background-image:url(/Barrio/imagenes/Cañitas.jpg);
+    background-image:url(./imagenes/Nuñez-Belgrano.jpg);
     background-size: cover;
-}
-.foto5{
-    background-image:url(/Barrio/imagenes/Nuñez-Belgrano.jpg);
-    background-size: cover;
-}
-.tamaño{
-    width: 220px;
+    width: 200px;
     height: 300px;
 }
 .texto-fotos{
-    position: absolute;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #FFFFFF;
     background-color: #788143;
     text-align: center;
-    margin: 50px;
     padding: 10px;
+    margin-top: 120px;
+    margin-left: 30px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+}
+.subrayado{
+    text-decoration: none;
 }
