--- a/style.css
+++ b/style.css
@@ -107,62 +107,62 @@ body{
         margin-top: 0px;
     }
     .container {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         display: flex;
-        justify-content: space-between;
-        align-items: baseline;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
     }
-    #paraTitulo{
+    .container > #paraTitulo{
         color: whitesmoke;
         font-family: 'Climate Crisis', cursive;
-        font-size: 18px;
-        margin-left: 20px;
-        align-self: center;
+        font-size: 60px;
+        margin-right: 50px;
+        margin-left: 40px;
+        text-align: center;
     }
-    #para1{
+    .container > #para1{
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 10px;
+        font-size: 20px;
         color:whitesmoke;
-        align-self: center;
-        margin-right: 20px;
+        text-align: right;
+        margin-right: 40px;
+        margin-left: 40px;
         margin-bottom: 0px;
     }
-    
-    #paraMenuSup{
-        background-color:#FFFFFF;
-        height: 40px;
+    .container > .flecha2{
+        margin: 0px;
+    }
+    .menu{
+        display: flex;
         position: sticky;
+        height: 40px;
         top: 0;
         margin-bottom: 20px;
-    }
-    #paraMenu1{
-        color: #0d1216;
+        background-color:#FFFFFF;
         font-family: 'Inter Tight', sans-serif;
-        width: 25vw;
-        float: left;
-        text-align: left;
-        margin-top: 8.5px;
+        color: #0d1216;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .volver{
         margin-left: 5px;
+        margin-right: 15px;
     }
-    #paraMenu2{
-        color: #0d1216;
-        font-family: 'Inter Tight', sans-serif;
-        width: 25vw;
-        float: left;
-        text-align: right;
-        margin-top: 8.5px;
+    .inicio{
+        margin-right: 15px;
     }
-    #paraMenu3{
-        color: #0d1216;
-        font-family: 'Inter Tight', sans-serif;
-        width: 47.2vw;
-        float: right;
-        text-align: left;
-        margin-top: 8.5px;
+    #link:first-child{
+        color:#0d1216;
     }
-    
-    .imgTabla{
+    .subrayado {
+        text-decoration: none;
+    }
+    .espacio{
+        margin-right: 15px;
+    }
+    .img{
         width: 100%;
         height: 100%;
     }
@@ -182,20 +182,19 @@ body{
     .flecha1{
         margin-right: 5px;
     }
-    .flecha2{
-        margin-top: 20px;
-        margin-bottom: 20px;
+    .lupa{
+        margin-left: 5px;
+        margin-right: 0px;
     }
     .fotos{
         display: flex;
         justify-content: center;
-        margin-top: 15px;
-        flex-wrap: wrap;
+        margin-top: 10px;
     }
     .foto{
-        width: 220px;
-        height: 250px;
+        width: 350px;
+        height: 400px;
         position: relative;
-        margin: 15px;
+        margin: 5px;
     }
 }
