--- a/style.css
+++ b/style.css
@@ -31,9 +31,6 @@ body{
     margin-left: 40px;
     margin-bottom: 0px;
 }
-.container > .flecha2{
-    margin: 0px;
-}
 .menu{
     display: flex;
     position: sticky;
@@ -97,7 +94,7 @@ body{
     position: relative;
     margin: 5px;
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 420px){
     body{
         background-color: #0d1216;
         border: 0px;
@@ -107,8 +104,8 @@ body{
         margin-top: 0px;
     }
     .container {
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         display: flex;
         justify-content: space-evenly;
         align-content: center;
@@ -117,38 +114,32 @@ body{
     .container > #paraTitulo{
         color: whitesmoke;
         font-family: 'Climate Crisis', cursive;
-        font-size: 60px;
-        margin-right: 50px;
-        margin-left: 40px;
+        font-size: 28px;
+        margin-right: 15px;
+        margin-left: 15px;
         text-align: center;
     }
     .container > #para1{
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 20px;
+        font-size: 14px;
         color:whitesmoke;
         text-align: right;
-        margin-right: 40px;
-        margin-left: 40px;
+        margin-right: 15px;
+        margin-left: 8px;
         margin-bottom: 0px;
     }
-    .container > .flecha2{
-        margin: 0px;
-    }
     .menu{
-        display: flex;
         position: sticky;
-        height: 40px;
+        display: flex;
+        height: 25px;
         top: 0;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         background-color:#FFFFFF;
         font-family: 'Inter Tight', sans-serif;
         color: #0d1216;
+        font-size: 12px;
         align-items: center;
         justify-content: space-between;
-    }
-    .volver{
-        margin-left: 5px;
-        margin-right: 15px;
     }
     .inicio{
         margin-right: 15px;
@@ -168,15 +159,14 @@ body{
     }
     .textoFoto{
         position: absolute;
-        top: 43%;
+        top: 35%;
         left: 15%;
         right: 15%;
         text-align: center;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: #FFFFFF;
+        font-size: 14px;
         padding: 3%;
-        padding-left: 5%;
-        padding-right: 5%;
         background-color: #6D3826;
     }
     .flecha1{
@@ -189,12 +179,12 @@ body{
     .fotos{
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         margin-top: 10px;
     }
     .foto{
-        width: 350px;
-        height: 400px;
-        position: relative;
+        width: 200px;
+        height: 250px;
         margin: 5px;
     }
 }
