--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
     background-color:#FFFFFF;
     font-family: 'Inter Tight', sans-serif;
     color: #0d1216;
-    align-items: center;
-    justify-content: space-between;
+    align-items:center;
+    justify-content:flex-end;
 }
 .inicio{
     margin-right: 15px;
