--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body{
     margin-left: 40px;
     margin-bottom: 0px;
 }
+.border-top{
+    border-width: 2px;
+}
 .img{
     width: 100%;
     height: 100%;
@@ -80,7 +83,8 @@ body{
 .fotos{
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .foto{
     width: 350px;
