--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -37,3 +37,34 @@ body{
 .flecha1{
     margin-right: 5px;
 }
+/*Solo de esta página*/
+.container {  display: grid;
+    grid-template-columns: 1.5fr 1.5fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Buscador Comida";
+  }
+  
+  .Buscador {
+    grid-area: Buscador;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+  
+  .Comida {  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". ."
+      ". ."
+      ". .";
+    grid-area: Comida;
+  }
+  
