--- a/Comida/comida.css
+++ b/Comida/comida.css
@@ -46,25 +46,33 @@ body{
     grid-auto-flow: row;
     grid-template-areas:
       "Buscador Comida";
-  }
-  
-  .Buscador {
-    grid-area: Buscador;
+} 
+.Intro{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    color:whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.Buscador {
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
 }
-  
-  .Comida {  display: grid;
-    grid-template-columns: 1fr 1fr;
+.Comida {  
+    display: grid;
+    grid-auto-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
     grid-template-areas:
-      ". ."
-      ". ."
-      ". .";
+      "1"
+      "2"
+      "3";
     grid-area: Comida;
-  }
+}
+
   
