--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     padding: 0px;
     border: 0px;
 }
-.container {  display: grid;
+.container-fluid {  display: grid;
     margin: 0px;
     padding: 0px;
     grid-template-rows: 0.2fr 0.5fr 2fr; 
