--- a/style.css
+++ b/style.css
@@ -19,18 +19,27 @@ body{
   }
   
   .Menú { 
+    grid-area: Menú;
+    padding-left: 10px;
+    padding-right: 10px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
     height: 40px;
-    grid-area: Menú;
     position: sticky;
     background-color:#FFFFFF;
     font-family: 'Inter Tight', sans-serif;
     color: #0d1216;
     }
-  
+  .Título { 
+    grid-area: Título;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    height: 200px;
+ }
   .Contenido {  display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -50,43 +59,26 @@ body{
   
   .Noche { grid-area: Noche; }
   
-  .Título { grid-area: Título; }
+  
 
 /* Clases del menú */
-.estilo1{
-    margin-left: 10px;
-    text-decoration: none;
-}
-.estilo2{
-    margin-right: 10px;
+.estilo{
     text-decoration: none;
 }
 #link:first-child{
     color:#0d1216;
 }
 
-/*
-.lupa{
-    margin-left: 5px;
-    margin-right: 0px;
-}
-.container{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: center;
-}
-.container > #paraTitulo{
+/* id título */
+#título{
     color: whitesmoke;
     font-family: 'Climate Crisis', cursive;
-    font-size: 60px;
+    font-size: 50px;
     margin-right: 50px;
     margin-left: 40px;
     text-align: center;
 }
-.container > #para1{
+#texto-título{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     color:whitesmoke;
@@ -95,6 +87,12 @@ body{
     margin-left: 40px;
     margin-bottom: 0px;
 }
+/*
+.lupa{
+    margin-left: 5px;
+    margin-right: 0px;
+}
+
 .border-top{
     border-width: 2px;
 }
