--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #0d1216;
+    background-color: white;
     margin: 0px;
     padding: 0px;
     border: 0px;
@@ -16,28 +16,29 @@ body{
       "Contenido";
     width: 100%; 
     height: 100%; 
-  }
-  
-  .Menú { 
+}
+  .Menú {
     grid-area: Menú;
-    padding-left: 10px;
-    padding-right: 10px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
     height: 40px;
-    position: sticky;
-    background-color:#FFFFFF;
-    font-family: 'Inter Tight', sans-serif;
-    color: #0d1216;
-    }
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color:#6ec3f1;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 17px;
+}
   .Título { 
+    margin-left: 220px;
+    margin-right: 220px;
     grid-area: Título;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
+    align-content: center;
     height: 200px;
  }
   .Contenido {  display: grid;
@@ -66,26 +67,25 @@ body{
     text-decoration: none;
 }
 #link:first-child{
-    color:#0d1216;
+    color: whitesmoke;
 }
 
 /* id título */
 #título{
-    color: whitesmoke;
-    font-family: 'Climate Crisis', cursive;
-    font-size: 50px;
-    margin-right: 50px;
-    margin-left: 40px;
+    padding: 0px;
+    margin: 0px;
+    color:#6ec3f1;
+    font-family: 'DM Serif Display', serif;
+    font-size: 75px;
     text-align: center;
 }
 #texto-título{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    font-family: 'DM Sans', sans-serif;
     font-size: 20px;
-    color:whitesmoke;
+    color:#0d1216;
     text-align: right;
-    margin-right: 40px;
-    margin-left: 40px;
-    margin-bottom: 0px;
 }
 /*
 .lupa{
