--- a/style.css
+++ b/style.css
@@ -1,165 +1,189 @@
 body{
-    background-color: white;
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-}
-.container-fluid {  display: grid;
-    margin: 0px;
-    padding: 0px;
-    grid-template-rows: 0.2fr 0.5fr 2fr; 
-    gap: 0px 0px; 
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Menú"
-      "Título"
-      "Contenido";
-    width: 100%; 
-    height: 100%; 
-}
-  .Menú {
-    grid-area: Menú;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color:#6ec3f1;
-    font-family: 'DM Sans', sans-serif;
-    font-size: 17px;
-}
-  .Título { 
-    margin-left: 220px;
-    margin-right: 220px;
-    grid-area: Título;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    height: 200px;
- }
-  .Contenido {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px 20px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Cafe Veggie BBB"
-      "Especial Bares Mapa"
-      ;
-    grid-area: Contenido;
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-  .Cafe { 
-    grid-area: Cafe; 
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/Cafe.JPG);
-    background-size: cover;
-    }
-
-  .Veggie { grid-area: Veggie; 
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/Veggie.JPG);
-    background-size: cover;}
-
-  .BBB{grid-area: BBB;
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/BBB.jpg);
-    background-size: cover;}
-  
-  .Especial { grid-area: Especial; 
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/Especial.JPG);
-    background-size: cover;}
-
-  .Bares{ grid-area: Bares; 
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/Bares.jpg);
-    background-size: cover;}
-  
-  .Mapa { grid-area: Mapa;
-    display: flex;
-    width: 100%;
-    height: 30vw;
-    background-image: url(./imagenes/Barrio.JPG);
-    background-size: cover; }
-
-/* Clases del menú */
-.estilo{
-    text-decoration: none;
-}
-#link:first-child{
-    color: whitesmoke;
+  background-color: #0d1216;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
 }
 
-/* id título */
-#título{
-    padding: 0px;
-    margin: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
-    color:#6ec3f1;
-    font-family: 'DM Serif Display', serif;
-    font-size: 80px;
-    text-align: center;
+/*Menu de arriba*/
+.menu{
+  display: flex;
+  align-items:center;
+  justify-content:flex-end;
+  position: sticky;
+  top: 0px;
+  height: 40px;
+  margin-bottom: 20px;
+  padding-right: 15px;
+  gap: 15px;
+  background-color:#FFFFFF;
 }
-#texto-título{
-    padding: 0px;
-    margin: 0px;
-    font-family: 'DM Sans', sans-serif;
-    font-size: 20px;
-    color:#0d1216;
-    text-align: right;
-}
-/*
-.lupa{
-    margin-left: 5px;
-    margin-right: 0px;
+#textoMenu{
+  font-family: 'Inter Tight', sans-serif;
+  color: #0d1216;
+  text-decoration: none;
 }
 
+/*Título*/
+.container{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
+}
+#paraTitulo{
+  color: whitesmoke;
+  font-family: 'Climate Crisis', cursive;
+  font-size: 60px;
+  margin-right: 50px;
+  margin-left: 40px;
+  text-align: center;
+}
+#para1{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  color:whitesmoke;
+  text-align: right;
+  margin-right: 40px;
+  margin-left: 40px;
+  margin-bottom: 0px;
+}
+
+/*Línea separadora*/
 .border-top{
-    border-width: 2px;
+  border-width: 2px;
 }
+
+/*Fotos*/
 .img{
-    width: 100%;
-    height: 100%;
-}
-.textoFoto{
-    position: absolute;
-    top: 43%;
-    left: 15%;
-    right: 15%;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #FFFFFF;
-    padding: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
-    background-color: #6D3826;
-}
-.fotos{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
 }
 .foto{
-    width: 350px;
-    height: 400px;
-    position: relative;
-    margin: 5px;
+  width: 350px;
+  height: 400px;
+  position: relative;
+  margin: 5px;
+}
+.textoFoto{
+  position: absolute;
+  top: 43%;
+  left: 15%;
+  right: 15%;
+  text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #FFFFFF;
+  padding: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+#fondo1{
+  background-color: #6D3826;
+}
+#fondo2{
+  background-color: #788143;
+}
+#fondo3{
+  background-color: #B89663;
+}
+.fotos{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/*Responsive*/
+@media screen and (max-width: 420px){
+  body{
+      background-color: #0d1216;
+      border: 0px;
+      padding: 0px;
+      margin-left: 0px;
+      margin-right: 0px;
+      margin-top: 0px;
+  }
+  .container{
+      margin-top: 5px;
+      margin-bottom: 5px;
+      display: flex;
+      justify-content: space-evenly;
+      align-content: center;
+      align-items: center;
+  }
+  .container > #paraTitulo{
+      color: whitesmoke;
+      font-family: 'Climate Crisis', cursive;
+      font-size: 28px;
+      margin-right: 15px;
+      margin-left: 15px;
+      text-align: center;
+  }
+  .container > #para1{
+      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-size: 14px;
+      color:whitesmoke;
+      text-align: right;
+      margin-right: 15px;
+      margin-left: 8px;
+      margin-bottom: 0px;
+  }
+  .menu{
+      display: flex;
+      position: sticky;
+      height: 25px;
+      top: 0;
+      margin-bottom: 10px;
+      background-color:#FFFFFF;
+      font-family: 'Inter Tight', sans-serif;
+      color: #0d1216;
+      align-items: center;
+      justify-content: flex-end;
+  }
+  .inicio{
+      margin-right: 15px;
+  }
+  #link:first-child{
+      color:#0d1216;
+      font-size: 12px;
+  }
+  .subrayado{
+      text-decoration: none;
+  }
+  .espacio{
+      margin-right: 15px;
+  }
+  .img{
+      width: 100%;
+      height: 100%;
+  }
+  .textoFoto{
+      position: absolute;
+      top: 35%;
+      left: 15%;
+      right: 15%;
+      text-align: center;
+      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      color: #FFFFFF;
+      font-size: 14px;
+      padding: 3%;
+      background-color: #6D3826;
+  }
+  .lupa{
+      margin-left: 5px;
+      margin-right: 0px;
+  }
+  .fotos{
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 10px;
+  }
+  .foto{
+      width: 200px;
+      height: 250px;
+      margin: 5px;
+  }
 }
