--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body{
   text-decoration: none;
 }
 
+/*Gran container*/
+.container{
+  display: block;
+}
+
 /*Título*/
 .container{
   margin-top: 20px;
@@ -57,133 +62,131 @@ body{
 }
 
 /*Fotos*/
-.img{
+#img{
   width: 100%;
   height: 100%;
 }
 .foto{
   width: 350px;
   height: 400px;
-  position: relative;
   margin: 5px;
 }
 .textoFoto{
-  position: absolute;
-  top: 43%;
-  left: 15%;
-  right: 15%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+#formato1{
+  background-color: #6D3826;
+  text-decoration: none;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #FFFFFF;
-  padding: 3%;
-  padding-left: 5%;
-  padding-right: 5%;
 }
-#fondo1{
-  background-color: #6D3826;
-}
-#fondo2{
+#formato2{
   background-color: #788143;
+  text-decoration: none;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #FFFFFF;
 }
-#fondo3{
+#formato3{
   background-color: #B89663;
+  text-decoration: none;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #FFFFFF;
 }
 .fotos{
   display: flex;
-  justify-content: center;
+  text-align: center;
+  justify-content: space-evenly;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 /*Responsive*/
-@media screen and (max-width: 420px){
+@media screen and (max-width: 600px){
   body{
-      background-color: #0d1216;
-      border: 0px;
-      padding: 0px;
-      margin-left: 0px;
-      margin-right: 0px;
-      margin-top: 0px;
+    background-color: #0d1216;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
   }
-  .container{
-      margin-top: 5px;
-      margin-bottom: 5px;
-      display: flex;
-      justify-content: space-evenly;
-      align-content: center;
-      align-items: center;
-  }
-  .container > #paraTitulo{
-      color: whitesmoke;
-      font-family: 'Climate Crisis', cursive;
-      font-size: 28px;
-      margin-right: 15px;
-      margin-left: 15px;
-      text-align: center;
-  }
-  .container > #para1{
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-size: 14px;
-      color:whitesmoke;
-      text-align: right;
-      margin-right: 15px;
-      margin-left: 8px;
-      margin-bottom: 0px;
-  }
+  
+  /*Menu de arriba*/
   .menu{
-      display: flex;
-      position: sticky;
-      height: 25px;
-      top: 0;
-      margin-bottom: 10px;
-      background-color:#FFFFFF;
-      font-family: 'Inter Tight', sans-serif;
-      color: #0d1216;
-      align-items: center;
-      justify-content: flex-end;
+    display: flex;
+    align-items:center;
+    justify-content:flex-end;
+    position: sticky;
+    top: 0px;
+    height: 40px;
+    margin-bottom: 20px;
+    padding-right: 15px;
+    gap: 15px;
+    background-color:#FFFFFF;
+    font-size: 13px;
   }
-  .inicio{
-      margin-right: 15px;
+  #textoMenu{
+    font-family: 'Inter Tight', sans-serif;
+    color: #0d1216;
+    text-decoration: none;
   }
-  #link:first-child{
-      color:#0d1216;
-      font-size: 12px;
+  
+  /*Título*/
+  .container{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
   }
-  .subrayado{
-      text-decoration: none;
+  #paraTitulo{
+    color: whitesmoke;
+    font-family: 'Climate Crisis', cursive;
+    font-size: 40px;
+    margin-right: 30px;
+    margin-left: 20px;
+    text-align: center;
   }
-  .espacio{
-      margin-right: 15px;
+  #para1{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    color:whitesmoke;
+    text-align: right;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 0px;
   }
+  
+  /*Línea separadora*/
+  .border-top{
+    border-width: 2px;
+  }
+  
+  /*Fotos*/
   .img{
-      width: 100%;
-      height: 100%;
-  }
-  .textoFoto{
-      position: absolute;
-      top: 35%;
-      left: 15%;
-      right: 15%;
-      text-align: center;
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      color: #FFFFFF;
-      font-size: 14px;
-      padding: 3%;
-      background-color: #6D3826;
-  }
-  .lupa{
-      margin-left: 5px;
-      margin-right: 0px;
-  }
-  .fotos{
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-top: 10px;
+    width: 100%;
+    height: 100%;
   }
   .foto{
-      width: 200px;
-      height: 250px;
-      margin: 5px;
+    width: 230px;
+    height: 280px;
+  }
+  .textoFoto{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #FFFFFF;
+  }
+  #fondo1{
+    background-color: #6D3826;
+  }
+  #fondo2{
+    background-color: #788143;
+  }
+  #fondo3{
+    background-color: #B89663;
+  }
+  .fotos{
+    display: flex;
+    flex-wrap: wrap;
   }
 }
