--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -92,3 +92,13 @@ body{
 #Form{
   margin: 15px;
 }
+
+/*Responsive*/
+@media screen and (max-width: 790px){
+  #textoMenu{
+      font-family: 'DM Sans', sans-serif;
+      color: #0d1216;
+      text-decoration: none;
+      font-size: 14px;
+    }
+  }
