--- a/Hora/hora.css
+++ b/Hora/hora.css
@@ -26,3 +26,12 @@ body{
     font-size: 17px;
   }
   
+/*Responsive*/
+@media screen and (max-width: 790px){
+  #textoMenu{
+      font-family: 'DM Sans', sans-serif;
+      color: #0d1216;
+      text-decoration: none;
+      font-size: 14px;
+    }
+  }
