cambio de lugar buscador

--- a/style.css
+++ b/style.css
@@ -90,6 +90,27 @@ body{
   font-size: 18px;
 }
 
+/*Buscador*/
+.buscador{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 35px;
+  gap: 10px;
+}
+#textoB {
+  font-size: 30px;
+  font-family: 'DM Sans', sans-serif;
+  color: whitesmoke;
+}
+#textoC{
+  font-size: 20px;
+  font-family: 'DM Sans', sans-serif;
+  color: whitesmoke;
+}
+
 /*Responsive*/
 @media screen and (max-width: 790px){
   #textoMenu{
@@ -118,5 +139,25 @@ body{
   }
   #formato{
     font-size: 15px;
+  }
+  /*Buscador*/
+  .buscador{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin: 25px;
+    gap: 5px;
+  }
+  #textoB {
+    font-size: 20px;
+    font-family: 'DM Sans', sans-serif;
+    color: whitesmoke;
+  }
+  #textoC{
+    font-size: 15px;
+    font-family: 'DM Sans', sans-serif;
+    color: whitesmoke;
   }
 }
