--- a/Barrio/Nuñez-Belgrano/nuñez-bel.css
+++ b/Barrio/Nuñez-Belgrano/nuñez-bel.css
@@ -71,3 +71,29 @@ body{
   text-align: center;
   font-family:'DM Sans', sans-serif;
 } 
+
+/*Responsive*/
+@media screen and (max-width: 790px){
+  #textoMenu{
+      font-family: 'DM Sans', sans-serif;
+      color: #0d1216;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .foto{
+      height: 300px;
+      width: 250px;
+      margin-bottom: 10px;
+    }
+    #titulo{
+      font-family:'DM Sans', sans-serif;
+      font-size: 30px;
+      color:whitesmoke;
+    }
+    #texto{
+      font-family:'DM Sans', sans-serif;
+      font-size: 16px;
+      color:whitesmoke;
+      text-align: center;
+    }
+  }
