--- a/Barrio/barrio.css
+++ b/Barrio/barrio.css
@@ -76,4 +76,44 @@ body{
       text-decoration: none;
       font-size: 14px;
     }
+    #titulo{
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      font-family: 'DM Sans', sans-serif;
+      color: whitesmoke;
+      font-size: 25px;
+      margin-top: 30px;
+  }
+  /*fotos*/
+  .fotos{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  #img{
+    width: 100%;
+    height: 100%;
+  }
+  .foto{
+    position: relative;
+    width: 200px;
+    height: 250px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .arriba{
+    position: absolute;
+  }
+  #formato{
+    font-family: 'DM Sans', sans-serif;
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: 18px;
+  }
   }
